--- a/sample.env
+++ b/sample.env
@@ -4,6 +4,7 @@ ROZETKA_BASE_URL=https://api-seller.rozetka.com.ua/
 ROZETKA_ORDER_LIMIT=50
 ROZETKA_SEARCH_MAX_PAGES=5
 ROZETKA_SEARCH_PAGE_SIZE=100
+ROZETKA_DIRECT_MAX_ATTEMPTS=5
 
 # KeyCRM API
 KEYCRM_API_KEY=
