--- a/package.json
+++ b/package.json
@@ -2,14 +2,9 @@
   "name": "rozetka_keycrm",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node src/index.js",
-    "fetch:orders": "node src/index.js",
-    "fetch:rozetka": "node src/rozetka.js",
-    "fetch:combined": "node src/combinedOrders.js",
-    "sync:rozetka-link": "node src/scripts/syncRozetkaLink.js",
-    "serve": "node src/server.js",
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "private": true,
